[package]
name = "tome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum", "markdown"] }
askama_axum = "0.3.0"
askama_escape = "0.10.3"
axum = "0.6.12"
axum-macros = "0.3.7"
color-eyre = "0.6.2"
futures = "0.3.28"
pulldown-cmark = "0.9.2"
serde = { version = "1.0.159", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["fs"] }
tower-http = { version = "0.4.0", features = ["fs"] }
url = "2.3.1"
urlencoding = "2.1.2"
