[package]
name = "tome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum", "markdown"] }
askama_axum = "0.3.0"
askama_escape = "0.10.3"
axum = { version = "0.6.12", features = ["multipart"] }
axum-macros = "0.3.7"
clap = { version = "4.2.1", features = ["derive"] }
color-eyre = "0.6.2"
figment = { version = "0.10.8", features = ["toml"] }
futures = "0.3.28"
pulldown-cmark = "0.9.2"
serde = { version = "1.0.159", features = ["derive"] }
time = { version = "0.3.20", features = ["formatting"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["fs"] }
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
urlencoding = "2.1.2"
uuid = { version = "1.3.0", features = ["v4"] }
yaml-front-matter = "0.1.0"
